--- a/LeetCode/搜字母大写.md
+++ b/LeetCode/搜字母大写.md
@@ -1,6 +1,5 @@
 # 将一句话的首字母都变为大写
-首先想到的是遍历字符串，判断前一个字符的值是否为`" "`,然后调用自带`upper()`函数对字符进行大写转化，将转化后的加入到新的列表之中，这里面涉及到一些类型的
-转化，注意一下
+首先想到的是遍历字符串，判断前一个字符的值是否为`" "`,然后调用自带`upper()`函数对字符进行大写转化，将转化后的加入到新的列表之中，这里面涉及到一些类型的转化，字符串转化函数只能对字符串类型使用，创建的列表里面不能有除字符串外的其他类型，否则会报错，注意一下。
 ```
 def toJadenCase(string):
     result = []
