--- a/LeetCode/二进制加.md
+++ b/LeetCode/二进制加.md
@@ -1,9 +1,19 @@
 # Binary Addition
-输入两个十进制数，要求输出二进制形式，这个很简单，发现使用`bin()`就可以转化为二进制，不过前面多了进制的表达`0b`，打印出转化后的类型，发现是字符串，
+- 输入两个十进制数，要求输出二进制形式，这个很简单，发现使用`bin()`就可以转化为二进制，不过前面多了进制的表达`0b`，打印出转化后的类型，发现是字符串，
 那就使用字符串切片输出从第三位开始的字符就可以了。
 ```
 def add_binary(a,b):
     #your code here
     sum = a+b
     return bin(sum)[2:]
+```
+- 不够简洁啊，精简一下
+```
+def add_binary(a,b):
+    return bin(a+b)[2:]
+```
+- 另外一种思路
+```
+def add_binary(a,b):
+    return '{0:b}'.format(a + b)
 ```
