--- a/LeetCode/区分列表中的数字与字符串.md
+++ b/LeetCode/区分列表中的数字与字符串.md
@@ -6,8 +6,7 @@ filter_list([1,'a','b',0,15]) == [1,0,15]
 filter_list([1,2,'aasf','1','123',123]) == [1,2,123]
 ```
 - 这个问题一开始思路是对的，想着通过`type`来判断遍历列表的每个元素，看一看是不是`int`类型的，但是在写判断语句的时候写错了，返回的空字符串，
-真是一脸懵逼。进行了调试，没有发现问题，想着会不会是这个语句不好使，然后想着使用字符串自带的函数`isdigit()`来进行判断，可是这个函数只能字符
-串使用，而传入的列表里有`int`型。后来重新捣鼓判断语句`if type(i) == ‘int’`发现自己后面写错了，不是字符串类型，应该改为`if type(i) == int`。
+真是一脸懵逼。进行了调试，没有发现问题，想着会不会是这个语句不好使，然后想着使用字符串自带的函数`isdigit()`来进行判断，可是这个函数只能字符串使用，而传入的列表里有`int`型。后来重新捣鼓判断语句`if type(i) == ‘int’`发现自己后面写错了，不是字符串类型，应该改为`if type(i) == int`。
 绕了一圈又回来了，真是坑，所以写每一句的时候，都要搞清楚表达的意思，要不然就是代码5分钟，调试2小时。
 ```
 def filter_list(l):
