--- a/LeetCode/带数字的字符串排序.md
+++ b/LeetCode/带数字的字符串排序.md
@@ -17,4 +17,14 @@ def order(sentence):
 ```
 def order(words):
   return ' '.join(sorted(words.split(), key=lambda w:sorted(w)))
+  
+def order(sentence):
+  return " ".join(sorted(sentence.split(), key=lambda x: int(filter(str.isdigit, x))))
 ```
+查了一下相关的函数，对上面的代码做一下解释。首先是`filter()`函数  
+1.filter() 函数用于过滤序列，过滤掉不符合条件的元素，返回由符合条件元素组成的新列表。
+该接收两个参数，第一个为函数，第二个为序列，序列的每个元素作为参数传递给函数进行判，然后返回 True 或 False，最后将返回 True 的元素放到新列表中。  
+2.sort() 函数用于对原列表进行排序，如果指定参数，则使用比较函数指定的比较函数。  
+ cmp -- 可选参数, 如果指定了该参数会使用该参数的方法进行排序。  
+ key -- 主要是用来进行比较的元素，只有一个参数，具体的函数的参数就是取自于可迭代对象中，指定可迭代对象中的一个元素来进行排序。  
+ reverse -- 排序规则，reverse = True 降序， reverse = False 升序（默认）。  
