--- a/LeetCode/带数字的字符串排序.md
+++ b/LeetCode/带数字的字符串排序.md
@@ -31,5 +31,6 @@ def order(sentence):
  &nbsp;&nbsp;3.sort 与 sorted 区别：  
 sort 是应用在 list 上的方法，sorted 可以对所有可迭代的对象进行排序操作。  
 list 的 sort 方法返回的是对已经存在的列表进行操作，无返回值，而内建函数 sorted 方法返回的是一个新的 list，而不是在原来的基础上进行的操作。
-- **`sorted`先对要排序的字符串中的数字排序，再按字符串的大小排序，这意味着不管数字是否连续，都可以按照数字的大小进行排序。**
+- **`sorted`先对要排序的字符串中的数字排序，再按字符串的大小排序，这意味着不管数字是否连续，都可以按照数字的大小进行排序。** 
+- [相关函数的具体介绍](http://www.runoob.com/python3/python3-func-sorted.html)
  
