--- a/LeetCode/带数字的字符串排序.md
+++ b/LeetCode/带数字的字符串排序.md
@@ -1,7 +1,7 @@
 # 给带有连续数字的字符串排序
-要达到的效果：
+- 要达到的效果：
 `"is2 Thi1s T4est 3a"  -->  "Thi1s is2 3a T4est" `
-先把问题分析一下，要对字符串的数排序，先要按空格把字符串分开，考虑使用函数`str.split(" ")`，这样会生成以空格为分隔的好几个字符串，并且赋值给列表。
+- 先把问题分析一下，要对字符串的数排序，先要按空格把字符串分开，考虑使用函数`str.split(" ")`，这样会生成以空格为分隔的好几个字符串，并且赋值给列表。
 对列表的元素进行操作，取出数字作比较，这里没有观察到数字是连续的，这是这道题的重点。
 ```
 def order(sentence):
@@ -13,7 +13,7 @@ def order(sentence):
                 output[int(j)-1] = words[i] #将相应位的数进行替换，没有涉及到排序操作
     return ' '.join(output)
 ```
-大神的操作：
+- 大神的操作：
 ```
 def order(words):
   return ' '.join(sorted(words.split(), key=lambda w:sorted(w)))
@@ -21,7 +21,7 @@ def order(words):
 def order(sentence):
   return " ".join(sorted(sentence.split(), key=lambda x: int(filter(str.isdigit, x))))
 ```
-查了一下相关的函数，对上面的代码做一下解释。首先是`filter()`函数  
+- 查了一下相关的函数，对上面的代码做一下解释。首先是`filter()`函数  
 &nbsp;&nbsp;1.filter() 函数用于过滤序列，过滤掉不符合条件的元素，返回由符合条件元素组成的新列表。
 该接收两个参数，第一个为函数，第二个为序列，序列的每个元素作为参数传递给函数进行判，然后返回 True 或 False，最后将返回 True 的元素放到新列表中。  
 &nbsp;&nbsp;2.sort() 函数用于对原列表进行排序，如果指定参数，则使用比较函数指定的比较函数。  
