--- a/LeetCode/删除字符串中的元音.md
+++ b/LeetCode/删除字符串中的元音.md
@@ -1,1 +1,25 @@
+- 达到这样的效果：`For example, the string "This website is for losers LOL!" would become "Ths wbst s fr lsrs LL!".`
+- 改了很多，才成功，判断的条件很重要，字符串要重新创建。
+```
+def disemvowel(string):
+    a = ""
+    for i in string:
+        if i.lower() not in 'aeiou':
+            a + = i
+    return a
+```
+- 大佬解法
+```
+def disemvowel(string):
+    return "".join(c for c in string if c.lower() not in "aeiou")
+    
+def disemvowel(s):
+    return s.translate(None, "aeiouAEIOU")
+    
+def disemvowel(s):
+    for i in "aeiouAEIOU":
+        s = s.replace(i,'')
+    return s
+```
+[Python3 translate()方法](http://www.runoob.com/python3/python3-string-translate.html)
 - **Python的每个对象都分为可变和不可变，主要的核心类型中，数字、字符串、元组是不可变的，列表、字典是可变的,对字符串改动，应该把变动的值赋给新的字符串变量**
