--- a/LeetCode/删除字符串中的元音.md
+++ b/LeetCode/删除字符串中的元音.md
@@ -23,4 +23,4 @@ def disemvowel(s):
 ```
 
 - **Python的每个对象都分为可变和不可变，主要的核心类型中，数字、字符串、元组是不可变的，列表、字典是可变的,对字符串改动，应该把变动的值赋给新的字符串变量**
-[Python3 translate()方法](http://www.runoob.com/python3/python3-string-translate.html)
+- [Python3 translate()方法](http://www.runoob.com/python3/python3-string-translate.html)
