--- a/LeetCode/盖楼.md
+++ b/LeetCode/盖楼.md
@@ -1,3 +1,4 @@
+# 大保健版
 - 控制字符串达到想要的效果,总体来说比较简单，字符串有一个`center`函数可以使用一下，感觉函数很重要，不用自己再去建轮子，省了好多功夫。
 ```
 def tower_builder(n_floors):
@@ -18,3 +19,41 @@ def tower_builder(n):
     return [("*" * (i*2-1)).center(n*2-1) for i in range(1, n+1)]
 
 ```
+# 天上人间版
+- 盖楼的高级版，对字符串的宽度和高度做了限制，做这道题关键是弄清楚头字符串的设置，后面都是等差字符串的，很好实现。没能够解决兼容的问题，导致代码出来
+比较臃肿，等会看一下大神怎么写的。
+```
+def tower_builder(n_floors, block_size):
+    w, h = block_size
+    # build here
+    ls = []
+    st = '*'*w
+
+    for i in range(h):
+        ls.append(st.center(w*n_floors*2-w))
+
+    for i in range(n_floors-1):
+        st += "*"*w*2
+        for i in range(h):
+            ls.append(st.center(w*n_floors*2-w))
+    return ls
+
+print(tower_builder(3,(2,3)))
+```
+- 膜拜大神
+```
+def tower_builder(n_floors, block_size):
+    w, h = block_size
+    width=(w+(n_floors-1)*w*2)   # 这样写意思更容易理解，我把括号打开了，哈哈，应该保留下来。
+    tower=[]
+    for i in range(1,n_floors+1): # 把遍历的i使用起来了，也就是把层数与每层的关系建立起来了，我使用的都是不会变动的数据，没有灵活性。
+        for k in range(1,h+1):    # 这么看起来代码清爽多了，解决了我的不兼容问题，单独定义了最前面的字符串。
+            level=( '*'*w * (i*2-1)).center(width)
+            tower.append(level)
+    return tower
+    
+    
+def tower_builder(n, (w, h)):
+    return [str.center("*" * (i*2-1)*w, (n*2-1)*w) for i in range(1, n+1) for _ in range(h)] # 更加简洁的做法,其中的 2 个 for 相当于嵌套循环，跟上面我写的一个意思。
+```
+[题目连接](https://www.codewars.com/kata/build-tower-advanced/train/python)
