--- a/LeetCode/盖楼.md
+++ b/LeetCode/盖楼.md
@@ -44,19 +44,19 @@ print(tower_builder(3,(2,3)))
 ```
 def tower_builder(n_floors, block_size):
     w, h = block_size
-    width=(w+(n_floors-1)*w*2)   # 这样写意思更容易理解，我把括号打开了，哈哈，应该保留下来。
+    width=(w+(n_floors-1)*w*2)    # 这样写意思更容易理解，我把括号打开了，哈哈，应该保留下来。
     tower=[]
     for i in range(1,n_floors+1): # 把遍历的i使用起来了，也就是把层数与每层的关系建立起来了，
-    我使用的都是不会变动的数据，没有灵活性。
+                                  # 我使用的都是不会变动的数据，没有灵活性。
         for k in range(1,h+1):    # 这么看起来代码清爽多了，解决了我的不兼容问题，单独定义
-        了最前面的字符串。
+                                  # 了最前面的字符串。
             level=( '*'*w * (i*2-1)).center(width)
             tower.append(level)
     return tower
     
     
 def tower_builder(n, (w, h)):
-    return [str.center("*" * (i*2-1)*w, (n*2-1)*w) for i in range(1, n+1) for _ in range(h)] # 更加简
-    洁的做法,其中的 2 个 for 相当于嵌套循环，跟上面我写的一个意思。
+    return [str.center("*" * (i*2-1)*w, (n*2-1)*w) for i in range(1, n+1) for _ in range(h)] 
+    # 更加简洁的做法,其中的 2 个 for 相当于嵌套循环，跟上面我写的一个意思。
 ```
 [题目连接](https://www.codewars.com/kata/build-tower-advanced/train/python)
