--- a/LeetCode/找零钱问题.md
+++ b/LeetCode/找零钱问题.md
@@ -1,5 +1,6 @@
 - 感觉没有多难的问题，就是做不出来啊，被自己蠢哭了。首先满脑子都是骚操作，想怎么写出来简洁好看，没有意思到解决问题是首要的，有功夫再慢慢优化嘛!
-- 题目就长这个丑样子：>The new "Avengers" movie has just been released! There are a lot of people at the cinema box office standing in a huge line. Each of them has a single 100, 50 or 25 dollars bill. An "Avengers" ticket costs 25 dollars.
+- 题目就长这个丑样子：  
+> The new "Avengers" movie has just been released! There are a lot of people at the cinema box office standing in a huge line. Each of them has a single 100, 50 or 25 dollars bill. An "Avengers" ticket costs 25 dollars.
 
 Vasya is currently working as a clerk. He wants to sell a ticket to every single person in this line.
 
