--- a/LeetCode/拆分整数.md
+++ b/LeetCode/拆分整数.md
@@ -1,4 +1,4 @@
-- 将整数按要求进行拆分[原题链接](https://www.codewars.com/kata/write-number-in-expanded-form/train/python)
+- 将整数按要求进行拆分--[原题链接](https://www.codewars.com/kata/write-number-in-expanded-form/train/python)
 - 虽然实现了这个功能，但是感觉不是很简洁美观。
 ```
 def expanded_form(num):
@@ -14,9 +14,19 @@ def expanded_form(num):
 ```
 - 参考一下圆润的代码  
     - [enumerate() 函数](http://www.runoob.com/python/python-func-enumerate.html)
-    - [Python join()方法](http://www.runoob.com/python/att-string-join.html)--我居然不知道这么用。
+    - [Python join()方法](http://www.runoob.com/python/att-string-join.html)--我居然不知道这么用。  
+    - [divmod() 函数](http://www.runoob.com/python/python-func-divmod.html)
 ```
 def expanded_form(num):
     num = list(str(num))
     return ' + '.join(x + '0' * (len(num) - y - 1) for y,x in enumerate(num) if x != '0')
+    ------------
+def expanded_form(n):
+    result = []
+    for a in range(len(str(n)) - 1, -1, -1):
+        current = 10 ** a
+        quo, n = divmod(n, current)
+        if quo:
+            result.append(str(quo * current))
+    return ' + '.join(result)
 ```
