--- a/LeetCode/盖楼.md
+++ b/LeetCode/盖楼.md
@@ -1,4 +1,4 @@
-# 大保健版
+## 大保健版
 - 控制字符串达到想要的效果,总体来说比较简单，字符串有一个`center`函数可以使用一下，感觉函数很重要，不用自己再去建轮子，省了好多功夫。
 ```
 def tower_builder(n_floors):
@@ -19,7 +19,7 @@ def tower_builder(n):
     return [("*" * (i*2-1)).center(n*2-1) for i in range(1, n+1)]
 
 ```
-# 天上人间版
+## 天上人间版
 - 盖楼的高级版，对字符串的宽度和高度做了限制，做这道题关键是弄清楚头字符串的设置，后面都是等差字符串的，很好实现。没能够解决兼容的问题，导致代码出来
 比较臃肿，等会看一下大神怎么写的。
 ```
