--- a/LeetCode/返回十进制数.md
+++ b/LeetCode/返回十进制数.md
@@ -12,7 +12,7 @@ def binary_array_to_number(arr):
   return sum
 ```
 - 大神制作，稍微解释一下，这里面`map(str, arr)`是把整型变量映射为字符串，方便将散开的整数串成一串，比如1001，然后将字符串转化为十进制整数，其中`int(str,str中的进制`）
-就可以实现想要的转化。真是长知识了！
+就可以实现想要的转化。真是涨知识了！
 ```
 def binary_array_to_number(arr):
   return int("".join(map(str, arr)), 2)
