--- a/书籍/读书笔记/爱情社会学-孙中兴.md
+++ b/书籍/读书笔记/爱情社会学-孙中兴.md
@@ -1,2 +1,11 @@
-# 第一课
-- 爱情的原则：平等对待，共同奋斗
+### 第一课
+- 爱情的原则：平等对待，共同奋斗  
+- 1)	Erich Fromm‧1969‧《愛的藝術》‧孟祥森譯‧台北：志文‧  
+     Erich Fromm‧2000‧《爱的艺术》‧李健鸣译‧北京：商务‧  
+    Erich Fromm‧2002‧《爱的艺术》‧刘福堂译‧桂林：广西师范大学‧2002‧  
+    原著：The Art of Loving. New York: Perennial. (1956)1989.  
+- 2)  Robert J. Sternberg‧2001‧《邱比特的箭》‧黃芳田譯‧台北：遠流‧  
+  原著：Cupid’s Arrow: The Course of Love Through Time. Cambridge: Cambridge University Press. 1998.
+- 3)	伊東明‧2004‧《愛，上了癮》‧廣梅芳譯‧台北：心靈工坊‧
+- 4)	Diane Ackerman‧1996‧《愛之旅》‧莊安祺譯‧台北：時報文化‧  
+		原著：A Natural History of Love. New York: Random House. 1995.
