--- a/书籍/读书笔记/爱情社会学-孙中兴.md
+++ b/书籍/读书笔记/爱情社会学-孙中兴.md
@@ -1,5 +1,6 @@
-### 第一课
-- 爱情的原则：平等对待，共同奋斗  
+## 第一课
+- 爱情的原则：**平等对待，共同奋斗 **
+### 参考书籍
 - 1)	Erich Fromm‧1969‧《愛的藝術》‧孟祥森譯‧台北：志文‧  
      Erich Fromm‧2000‧《爱的艺术》‧李健鸣译‧北京：商务‧  
     Erich Fromm‧2002‧《爱的艺术》‧刘福堂译‧桂林：广西师范大学‧2002‧  
