--- a/LeetCode/**239. Sliding Window Maximum.md
+++ b/LeetCode/**239. Sliding Window Maximum.md
@@ -1,3 +1,6 @@
 ### 返回滑动窗口中的最大值，[题目链接](https://leetcode.com/problems/sliding-window-maximum/description/)
 - Given an array nums, there is a sliding window of size k which is moving from the very left of the array to the very right. 
 You can only see the k numbers in the window.Each time the sliding window moves right by one position. Return the max sliding window.
+- 实现方式
+    - 大顶堆
+    - 双端队列
