Update **239. Sliding Window Maximum.md

--- a/LeetCode/**239. Sliding Window Maximum.md
+++ b/LeetCode/**239. Sliding Window Maximum.md
@@ -4,3 +4,22 @@ You can only see the k numbers in the window.Each time the sliding window moves 
 - 实现方式
     - 大顶堆
     - 双端队列
+- 双端队列的实现
+```
+
+def maxSlidingWindow(nums, k):
+        if not nums:return []
+        window, res = [], []
+        for i, x in enumerate(nums):
+            if i >= k and window[0] <= i - k:
+                window.pop(0)
+            while window and nums[window[-1]] <= x:#前面的索引的数比后面进来的小，就可以滚蛋了
+                window.pop()
+            window.append(i)
+            if i >= k - 1:                        #当遍历的个数达到3之后，就开始记录最大的数
+                res.append(nums[window[0]])
+        return res
+ls = [1,2,8,9,5,11]
+n = 3
+print(maxSlidingWindow(ls,n))
+```
