Update **239. Sliding Window Maximum.md

--- a/LeetCode/**239. Sliding Window Maximum.md
+++ b/LeetCode/**239. Sliding Window Maximum.md
@@ -11,12 +11,12 @@ def maxSlidingWindow(nums, k):
         if not nums:return []
         window, res = [], []
         for i, x in enumerate(nums):
-            if i >= k and window[0] <= i - k:
+            if i >= k and window[0] <= i - k:       # 窗口的大小为k，那么最左边的大小就不能超过i-k,否则就越界了
                 window.pop(0)
-            while window and nums[window[-1]] <= x:#前面的索引的数比后面进来的小，就可以滚蛋了
+            while window and nums[window[-1]] <= x: # 前面的索引的数比后面进来的小，就可以滚蛋了
                 window.pop()
             window.append(i)
-            if i >= k - 1:                        #当遍历的个数达到3之后，就开始记录最大的数
+            if i >= k - 1:                          # 当遍历的个数达到3之后，就开始记录最大的数
                 res.append(nums[window[0]])
         return res
 ls = [1,2,8,9,5,11]
