Update **239. Sliding Window Maximum.md

--- a/LeetCode/**239. Sliding Window Maximum.md
+++ b/LeetCode/**239. Sliding Window Maximum.md
@@ -23,3 +23,4 @@ ls = [1,2,8,9,5,11]
 n = 3
 print(maxSlidingWindow(ls,n))
 ```
+- [穷举法||大顶堆||双端队列](https://leetcode.com/problems/sliding-window-maximum/discuss/65957/Python-solution-with-detailed-explanation)
