--- a/LeetCode/算法笔记/哈希表.md
+++ b/LeetCode/算法笔记/哈希表.md
@@ -1,2 +1,2 @@
-- 分为俩种实现方式，hash table 和 binary search tree, hash table 时间复杂度为 O(1），binary search tree 时间复杂度为 O(log(n)）,虽然
-binary search tree 时间复杂度跟高，但是它的数据是相对有序的。所以根据具体的情况选择要使用的哈希表。
+- 分为俩种实现方式, hash table 和 binary search tree, hash table 时间复杂度为 O(1）, binary search tree 时间复杂度为 O(log(n)）,虽然
+binary search tree 时间复杂度跟高, 但是它的数据是相对有序的。所以根据具体的情况选择要使用的哈希表。
