--- a/书籍/读书笔记/红楼梦.md
+++ b/书籍/读书笔记/红楼梦.md
@@ -1,29 +1,29 @@
 ### 红楼梦中唯美的词句
 - 巧者劳而智者忧，无能者无所求，饱食而遨游，泛若不系之舟，虚而遨游者也。语出《庄子·列御寇》。
-- 葬花吟
->花谢花飞花满天，红消香断有谁怜？
-游丝软系飘春榭，落絮轻沾扑绣帘。
-帘中女儿惜春莫4，愁绪满怀无处诉。
-手把花锄出绣帘，忍踏落花来复去？
-柳丝榆荚自芳菲，不管桃飘与柳飞。
-桃李明年能再发，明岁闺中知有谁？
-三月香巢已垒成，梁间燕子太无情！
-明年花发虽可啄，却不道人去梁空巢也倾。
-一年三百六十日，风刀霜剑严相逼。
-明媚鲜妍能几时？一朝漂泊难寻觅。
-花开易见落难寻，阶前闷杀葬花人。
-独把香锄泪暗洒，洒上花枝见血痕5。
-杜鹃无语正黄昏，荷锄归去掩重门。
-青灯照壁人初睡，冷雨敲窗被未温。
-怪奴底事倍伤神？半为怜春半恼春。
-怜春忽至恼忽去，至又无言去不闻。
-昨宵庭外悲歌发，知是花魂与鸟魂。
-花魂鸟魂总难留，鸟自无言花自羞。
-愿奴胁下生双翼，随花飞落天尽头。
-天尽头，何处有香丘？
-未若锦囊收艳骨，一抔冷土掩风流。
-质本洁来还洁去，强于污淖陷渠沟。
-尔今死去奴收葬，未卜奴身何日亡？
-奴今葬花人笑痴，他年葬奴（我）知是谁6？
-试看春残花渐落，便是红颜老死时！
-一朝春尽红颜老，花落人亡两不知。 [3]
+- 《葬花吟》
+>花谢花飞花满天，红消香断有谁怜？  
+游丝软系飘春榭，落絮轻沾扑绣帘。  
+帘中女儿惜春莫4，愁绪满怀无处诉。  
+手把花锄出绣帘，忍踏落花来复去？  
+柳丝榆荚自芳菲，不管桃飘与柳飞。  
+桃李明年能再发，明岁闺中知有谁？  
+三月香巢已垒成，梁间燕子太无情！  
+明年花发虽可啄，却不道人去梁空巢也倾。  
+一年三百六十日，风刀霜剑严相逼。  
+明媚鲜妍能几时？一朝漂泊难寻觅。  
+花开易见落难寻，阶前闷杀葬花人。  
+独把香锄泪暗洒，洒上花枝见血痕。  
+杜鹃无语正黄昏，荷锄归去掩重门。  
+青灯照壁人初睡，冷雨敲窗被未温。  
+怪奴底事倍伤神？半为怜春半恼春。  
+怜春忽至恼忽去，至又无言去不闻。  
+昨宵庭外悲歌发，知是花魂与鸟魂。  
+花魂鸟魂总难留，鸟自无言花自羞。  
+愿奴胁下生双翼，随花飞落天尽头。  
+天尽头，何处有香丘？  
+未若锦囊收艳骨，一抔冷土掩风流。  
+质本洁来还洁去，强于污淖陷渠沟。  
+尔今死去奴收葬，未卜奴身何日亡？  
+奴今葬花人笑痴，他年葬奴（我）知是谁？  
+试看春残花渐落，便是红颜老死时！  
+一朝春尽红颜老，花落人亡两不知。   
