--- a/书籍/读书笔记/红楼梦.md
+++ b/书籍/读书笔记/红楼梦.md
@@ -3,7 +3,7 @@
 - 《葬花吟》
 >花谢花飞花满天，红消香断有谁怜？  
 游丝软系飘春榭，落絮轻沾扑绣帘。  
-帘中女儿惜春莫4，愁绪满怀无处诉。  
+帘中女儿惜春莫，愁绪满怀无处诉。  
 手把花锄出绣帘，忍踏落花来复去？  
 柳丝榆荚自芳菲，不管桃飘与柳飞。  
 桃李明年能再发，明岁闺中知有谁？  
