Update 242. Valid Anagram.md

--- a/LeetCode/242. Valid Anagram.md
+++ b/LeetCode/242. Valid Anagram.md
@@ -2,4 +2,4 @@
 - Given two strings s and t , write a function to determine if t is an anagram of s.
 - 思路  
     - sort 排序字符串，比较排序之后的字符串是否相等
-    - map 映射，每个字符：字符个数，比较映射结果
+    - map 映射，{每个字符：字符个数}，比较映射结果
