--- a/LeetCode/242. Valid Anagram.md
+++ b/LeetCode/242. Valid Anagram.md
@@ -3,3 +3,21 @@
 - 思路  
     - sort 排序字符串，比较排序之后的字符串是否相等
     - map 映射，{每个字符：字符个数}，比较映射结果
+- 具体实现代码
+    - 时间复杂度为 O(nlogn)
+```
+class Solution:
+    def isAnagram(self, s: str, t: str) -> bool:
+        return sorted(s) == sorted(t)
+```
+    - 时间复杂度为 O(n)
+```
+class Solution:
+    def isAnagram(self, s: str, t: str) -> bool:
+        dict1, dict2 = {},{}
+        for item in s:
+            dict1[item] = dict1.get(item,0) + 1
+        for item in t:
+            dict2[item] = dict2.get(item,0) + 1
+        return dict1 == dict2
+```
