--- a/LeetCode/242. Valid Anagram.md
+++ b/LeetCode/242. Valid Anagram.md
@@ -3,14 +3,14 @@
 - 思路  
     - sort 排序字符串，比较排序之后的字符串是否相等
     - map 映射，{每个字符：字符个数}，比较映射结果
-- 具体实现代码
--1 时间复杂度为 O(nlogn)
+- 具体实现代码  
+- 时间复杂度为 O(nlogn)
 ```
 class Solution:
     def isAnagram(self, s: str, t: str) -> bool:
         return sorted(s) == sorted(t)
 ```
--2 时间复杂度为 O(n),[get 函数](https://www.runoob.com/python3/python3-att-dictionary-get.html)
+- 时间复杂度为 O(n),[get 函数](https://www.runoob.com/python3/python3-att-dictionary-get.html)
 ```
 class Solution:
     def isAnagram(self, s: str, t: str) -> bool:
