Update 242. Valid Anagram.md

--- a/LeetCode/242. Valid Anagram.md
+++ b/LeetCode/242. Valid Anagram.md
@@ -1,9 +1,9 @@
 ### 有效的字母的异位词
-- Given two strings s and t , write a function to determine if t is an anagram of s.
+#### Given two strings s and t , write a function to determine if t is an anagram of s.
 - 思路  
     - sort 排序字符串，比较排序之后的字符串是否相等
     - map 映射，{每个字符：字符个数}，比较映射结果
-- 具体实现代码  
+#### 具体实现代码  
 - 时间复杂度为 O(nlogn)
 ```
 class Solution:
