--- a/java/编程小技巧.md
+++ b/java/编程小技巧.md
@@ -1,2 +1,2 @@
-- count++可以换为 ++count 更高效；在写代码中，如非必需，尽量避免后置形式，因为：前置形式避免了不必要的工作，它把值加1（或减1）后直接返回改变了的运算对象，而后置形式需要将原始值存储下来，以便返回这个未修改的原始值。如果我们不需要未修改的原始值时，那么后置形式的写法就是一种浪费。
+- count++可以换为 ++count 更高效；在写代码中，如非必需，尽量避免后置形式，因为：前置形式避免了不必要的工作，它把值加1（或减1）后直接返回改变了的运算对象，而后置形式需要将原始值存储下来，以便返回这个未修改的原始值。如果我们不需要未修改的原始值时，那么后置形式的写法就是一种浪费。(https://blog.csdn.net/qq_34471736/article/details/54599901)
 
